public class PlayerAnimation
{
    public const string Idle = "Idle";
    public const string Fall = "Fall";
    public const string FallDown = "FallDown";
    public const string Jump = "Jump";
    public const string Hurt = "Hurt";
    public const string Die = "Die";
    public const string AttackL = "AttackL";
    public const string AttackR = "AttackR";
    public const string Mark = "Mark";
    public const string DashCharge = "DashCharge";
    public const string Dash = "Dash";
    public const string Skill1 = "Skill1";
    public const string Skill2 = "Skill2";
    public const string Revive = "Revive";
}
