public static class MonsterAnimTrigger
{
    public const string walkAnimBool = "IsWalk";
    public const string attackChargeAnimTrigger = "Attack"; // TODO: 사실 상 Charge로 쓰임임
    public const string attackEndAnimTrigger = "AttackEnd";
    public const string repeatAttackBool = "RepeatAttack";
    public const string groggyBool = "Groggy";
    public const string turnAnimTrigger = "Turn";
    public const string hurtAnimTrigger = "Hurt";
    public const string fallAnimTrigger = "Fall";
    public const string dieAnimBool = "Die";
}